--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <img src="./images/challenges.webp" alt="Icône Défis"/>
                         <div class="box_info">
                             <h4>Challenges</h4>
-                            <p>Affrontez des scénarios concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
+                            <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
                             <div class="check_box">
                                 <i class="far fa-check-square checkbox-icon"></i><p>Mise en pratique</p>
                             </div>
