--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/glitch.css"/>
-    <link rel="stylesheet" href="./css/header.css"/>
-    <link rel="stylesheet" href="./css/intro.css"/>
-    <link rel="stylesheet" href="./css/pres.css"/>
-    <link rel="stylesheet" href="./css/new.css"/>
-    <link rel="stylesheet" href="./css/footer.css"/>
+    <link rel="stylesheet" href="./css/header_footer.css"/>
+    <link rel="stylesheet" href="./css/index.css"/>
+
 
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
 
@@ -126,7 +124,6 @@
         <section class="new">
             <div class="new_info">
                 <h2 class="main-title">Les nouveautées du moment</h2>
-                <h3 class="subtitle">Découvrez nos nouveaux ajouts<h3>
             </div>
             <div class="new_images">
                 <a href="#" class="clickable-image-wrapper">
