--- a/lessons.html
+++ b/lessons.html
@@ -13,11 +13,7 @@
 
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/glitch.css"/>
-    <link rel="stylesheet" href="./css/header.css"/>
-    <link rel="stylesheet" href="./css/intro.css"/>
-    <link rel="stylesheet" href="./css/pres.css"/>
-    <link rel="stylesheet" href="./css/new.css"/>
-    <link rel="stylesheet" href="./css/footer.css"/>
+    <link rel="stylesheet" href="./css/header_footer.css"/>
     <link rel="stylesheet" href="./css/lessons.css"/>
 
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
