--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="check_box">
                                 <i class="far fa-check-square checkbox-icon"></i><p>Ressources Claires</p>
                             </div>
-                     </div>
+                       </div>
                     </div>
                 </a>
                 <a href="./challenges.html">
@@ -128,7 +128,7 @@
             <div class="new_images">
                 <a href="#" class="clickable-image-wrapper">
                     <div class="image-container">
-                        <img src="./images/tmp1.png" alt="Produit Image" onerror="this.onerror=null; this.src='https://placehold.co/320x240/A78BFA/ffffff?text=Image+Non+Trouvée';">
+                        <img src="./images/tmp1.png" alt="Produit Image" onerror="this.style.display='none';">
                         <div class="overlay">
                             <div>
                                 <div class="overlay-title">Cyber-attaques</div>
@@ -139,7 +139,7 @@
                 </a>
                 <a href="#" class="clickable-image-wrapper">
                     <div class="image-container">
-                        <img src="./images/tmp2.png" alt="Produit Image" onerror="this.onerror=null; this.src='https://placehold.co/320x240/A78BFA/ffffff?text=Image+Non+Trouvée';">
+                        <img src="./images/tmp2.png" alt="Produit Image" onerror="this.style.display='none';">
                         <div class="overlay">
                             <div>
                                 <div class="overlay-title">Forensics</div>
@@ -150,7 +150,7 @@
                 </a>
                 <a href="#" class="clickable-image-wrapper">
                     <div class="image-container">
-                        <img src="./images/tmp3.png" alt="Produit Image" onerror="this.onerror=null; this.src='https://placehold.co/320x240/A78BFA/ffffff?text=Image+Non+Trouvée';">
+                        <img src="./images/tmp3.png" alt="Produit Image" onerror="this.style.display='none';">
                         <div class="overlay">
                             <div>
                                 <div class="overlay-title">Sécurité Web</div>
