--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="box_container">
                 <a href="./lessons.html">
                     <div class="box_pres">
-                       <img src="./images/lessons.webp" alt="Icône Leçons"/>
-                       <div class="box_info">
+                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                        <div class="box_info">
                             <h4>Leçons</h4>
                             <p>Découvrez les bases fondamentales et maîtrisez les concepts clés de la cybersécurité avec une approche structurée et complète.</p>
                             <div class="check_box">
@@ -78,7 +78,7 @@
                             <div class="check_box">
                                 <i class="far fa-check-square checkbox-icon"></i><p>Ressources Claires</p>
                             </div>
-                       </div>
+                        </div>
                     </div>
                 </a>
                 <a href="./challenges.html">
@@ -121,10 +121,24 @@
 
         </section>
 
-        <section class="new">
-            <div class="new_info">
-                <h2 class="main-title">Les nouveautées du moment</h2>
+        <section class="event">
+            <div class="event_info">
+                <h2 class="main-title">Nouveautés et prochain évènement Kr[HACK]en</h2>
             </div>
+            <a href="#" class="clickable-image-wrapper">
+                <div class="image-container">
+                    <img src="./images/tmp3.png" alt="Produit Image" onerror="this.style.display='none';">
+                    <div class="overlay">
+                        <div>
+                            <div class="overlay-title">Session 0</div>
+                            <div class="overlay-subtitle">ctf et autres</div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </section>
+
+        <section class="new">
             <div class="new_images">
                 <a href="#" class="clickable-image-wrapper">
                     <div class="image-container">
@@ -161,7 +175,6 @@
                 </a>
             </div>
         </section>
-
     </div>
 
 
