--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/header_footer.css"/>
     <link rel="stylesheet" href="./css/index.css"/>
 
-
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
 
     <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
@@ -28,9 +27,7 @@
 
     <header>
         <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="logo_krhackademy" width="40" height="40"/></a>
-
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
-
         <nav class="nav_bar">
             <ul>
                 <li class="active"><a href="./index.html">ACCUEIL</a></li>
@@ -39,7 +36,6 @@
                 <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
-
         <div class="fas fa-bars"></div>
     </header>
 
@@ -51,7 +47,6 @@
                 <h2 class="main-title"><span id="dynamic-text" class="glitch" data-text="en ligne"></span></h2>
                 <h3 class="subtitle">Créé par le <i>Kr[HACK]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
-
             <div class="image_intro">
                 <img src="./images/krhacken_laurier.webp" alt="logo_krhackademy"/>
             </div>
@@ -61,7 +56,6 @@
             <div class="text_pres">
                 <h2 class="main-title">Apprendre - Pratiquer - Réussir</h2>
             </div>
-
             <div class="box_container">
                 <a href="./lessons.html">
                     <div class="box_pres">
@@ -69,15 +63,9 @@
                         <div class="box_info">
                             <h4>Leçons</h4>
                             <p>Découvrez les bases fondamentales et maîtrisez les concepts clés de la cybersécurité avec une approche structurée et complète.</p>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Théorie Solide</p>
-                            </div>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Apprentissage Progressif</p>
-                            </div>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Ressources Claires</p>
-                            </div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Théorie Solide</p></div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Apprentissage Progressif</p></div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Ressources Claires</p></div>
                         </div>
                     </div>
                 </a>
@@ -87,15 +75,9 @@
                         <div class="box_info">
                             <h4>Challenges</h4>
                             <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Mise en pratique</p>
-                            </div>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Scénarios Réels</p>
-                            </div>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Compétition Amicale</p>
-                            </div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Mise en pratique</p></div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Scénarios Réels</p></div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Compétition Amicale</p></div>
                         </div>
                     </div>
                 </a>
@@ -105,70 +87,60 @@
                         <div class="box_info">
                             <h4>Scénarios</h4>
                             <p>Validez vos aptitudes pratiques et vos acquis théoriques en suivant nos scénarios guidés pour completer votre profil</p>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Cyber-attaques guidées</p>
-                            </div>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Découverte d'outils puissants</p>
-                            </div>
-                            <div class="check_box">
-                                <i class="far fa-check-square checkbox-icon"></i><p>Guidés et réalistes</p>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Cyber-attaques guidées</p></div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Découverte d'outils puissants</p></div>
+                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Guidés et réalistes</p></div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <section class="news">
+            <div class="news-info">
+                <h2 class="main-title">Nouveautés et Évènements</h2>
+                <a href="#" class="news-card event">
+                    <div class="card-image-container">
+                        <img src="./images/tmp3.png" alt="Évènement Session 0" onerror="this.style.display='none';">
+                        <div class="card-overlay">
+                            <div>
+                                <div class="card-title">Session 0</div>
+                                <div class="card-subtitle">le 1 septembre à 5h30 en B652</div>
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-
-        </section>
-
-        <section class="event">
-            <div class="event_info">
-                <h2 class="main-title">Nouveautés et prochain évènement Kr[HACK]en</h2>
-            </div>
-            <a href="#" class="clickable-image-wrapper">
-                <div class="image-container">
-                    <img src="./images/tmp3.png" alt="Produit Image" onerror="this.style.display='none';">
-                    <div class="overlay">
-                        <div>
-                            <div class="overlay-title">Session 0</div>
-                            <div class="overlay-subtitle">ctf et autres</div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </section>
-
-        <section class="new">
-            <div class="new_images">
-                <a href="#" class="clickable-image-wrapper">
-                    <div class="image-container">
-                        <img src="./images/tmp1.png" alt="Produit Image" onerror="this.style.display='none';">
-                        <div class="overlay">
+            <div class="news-grid">
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
+                        <img src="./images/tmp1.png" alt="Nouveauté Cyber-attaques" onerror="this.style.display='none';">
+                        <div class="card-overlay">
                             <div>
-                                <div class="overlay-title">Cyber-attaques</div>
-                                <div class="overlay-subtitle">Découvrez les techniques courantes d'attaques et comment les contrer.</div>
+                                <div class="card-title">Cyber-attaques</div>
+                                <div class="card-subtitle">Découvrez les techniques courantes d'attaques et comment les contrer.</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="clickable-image-wrapper">
-                    <div class="image-container">
-                        <img src="./images/tmp2.png" alt="Produit Image" onerror="this.style.display='none';">
-                        <div class="overlay">
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
+                        <img src="./images/tmp2.png" alt="Nouveauté Forensics" onerror="this.style.display='none';">
+                        <div class="card-overlay">
                             <div>
-                                <div class="overlay-title">Forensics</div>
-                                <div class="overlay-subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</div>
+                                <div class="card-title">Forensics</div>
+                                <div class="card-subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="clickable-image-wrapper">
-                    <div class="image-container">
-                        <img src="./images/tmp3.png" alt="Produit Image" onerror="this.style.display='none';">
-                        <div class="overlay">
-                            <div>
-                                <div class="overlay-title">Sécurité Web</div>
-                                <div class="overlay-subtitle">Construisez une application web sécurisée de A à Z.</div>
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
+                        <img src="./images/tmp3.png" alt="Nouveauté Sécurité Web" onerror="this.style.display='none';">
+                        <div class="card-overlay">
+                           <div>
+                                <div class="card-title">Sécurité Web</div>
+                                <div class="card-subtitle">Construisez une application web sécurisée de A à Z.</div>
                             </div>
                         </div>
                     </div>
@@ -176,7 +148,6 @@
             </div>
         </section>
     </div>
-
 
     <footer>
         <a href="https://krhacken.org" target="_blank"> <img src="images/logo.webp" alt="krhacken cybersecurity & ethical hacking"> </a>
