--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h2 class="main-title">Nouveautés et Évènements</h2>
                 <a href="#" class="news-card event">
                     <div class="card-image-container">
-                        <img src="./images/tmp3.png" alt="Évènement Session 0" onerror="this.style.display='none';">
+                        <img src="./images/tmp4.jpg" alt="Évènement Session 0" onerror="this.style.display='none';">
                         <div class="card-overlay">
                             <div>
                                 <div class="card-title">Session 0</div>
