--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <section class="pres">
             <div class="text_pres">
-                <h2 class="main-title">Apprendre - Pratiquer - Réussir</h2>
+                <h2 class="main-title">Apprendre <span class="hyphen">- </span>Pratiquer <span class="hyphen">- </span>Réussir</h2>
             </div>
             <div class="box_container">
                 <a href="./lessons.html">
