--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
         
         <section class="intro">
             <div class="text_intro">
-                <h2 class="main-title">Apprends la cybersécurité</h2>
-                <h2 class="main-title"><span id="dynamic-text" class="glitch" data-text="en ligne"></span></h2>
+                <h2 class="main-title">Apprends la cybersécurité <br><span id="dynamic-text" class="glitch" data-text="en ligne"></span></br></h2>
                 <h3 class="subtitle">Créé par le <i>Kr[HACK]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
             <div class="image_intro">
-                <img src="./images/krhacken_laurier.webp" alt="logo_krhackademy"/>
+                <img src="./images/krhacken_laurier.webp" alt="logo_krhackademy_laurier"/>
             </div>
         </section>
 
